en/3.4/_sources/index.rst.txt
.. Read the Docs Template documentation master file, created by
   sphinx-quickstart on Tue Aug 26 14:19:49 2014.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.

Welcome to Netris Documentation
==================================================

Learn how to get started with Netris VPC Networking for your network environment.

You are welcome to join our `Slack channel <https://netris.io/slack>`_ to get additional support from our engineers and community. 

.. toctree::
   :maxdepth: 2
   :caption: Tutorials

   tutorials/index
   tutorials/vpc-anywhere
   tutorials/netris-vpc-for-equinix-metal
   tutorials/netris-vpc-for-phoenixnap-bmc
   tutorials/netris-vpc-for-aws
   tutorials/netris-vpc-for-gcp

.. toctree::
   :maxdepth: 4
   :caption: Cloud Native Tools

   kubernetes-integration
   terraform-integration

.. toctree::
   :maxdepth: 2
   :caption: Netris Fundamentals

   introduction
   netris-architecture
   supported-networks

.. toctree::
   :maxdepth: 2
   :caption: Detailed Installation

   installation
   switch-agent-installation
   SoftGate-installation
   SoftGate-PRO-installation

.. toctree::
   :maxdepth: 2
   :caption: Switch-fabric Configuration

   definitions
   ipam
   topology-management
   switch-ports

.. toctree::
   :maxdepth: 4
   :caption: Network Policies

   network-policies

.. toctree::
   :maxdepth: 4
   :caption: Network Services

   vnet
   l3-load-balancer
   l4-load-balancer
   acls
   roh

.. toctree::
   :maxdepth: 4
   :caption: Operations

   visibility
   accounts
   
.. toctree::
   :maxdepth: 4
   :caption: Updates

   release-notes
   softgate-performance

.. toctree::
   :maxdepth: 4
   :caption: Lab Scenarios
   
   sandbox/Sandbox1/onprem-k8s
